gen/flutterParser.java
// Generated from C:/Users/Bayan/Desktop/CompilerProject3/src\flutterParser.g4 by ANTLR 4.10.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class flutterParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.10.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		A=1, AA=2, AE=3, AT=4, C=5, CB=6, CBC=7, CIR=8, CIRE=9, CO=10, CP=11, 
		D=12, DD=13, DDD=14, EE=15, EG=16, EQ=17, GT=18, LT=19, LTE=20, LTLT=21, 
		LTLTE=22, ME=23, MINUS=24, MM=25, NE=26, NOT=27, OB=28, OBC=29, OP=30, 
		P=31, PC=32, PE=33, PL=34, PLE=35, PLPL=36, PO=37, POE=38, PP=39, QU=40, 
		QUD=41, QUDD=42, QUQU=43, QUQUEQ=44, ROW=45, SC=46, SE=47, SL=48, SQS=49, 
		SQSE=50, SQUIG=51, ST=52, STE=53, ABSTRACT_=54, AS_=55, ASSERT_=56, ASYNC_=57, 
		AWAIT_=58, ADD_=59, BOXDECORATION_=60, BOXSHAPE_=61, BREAK_=62, CASE_=63, 
		CATCH_=64, CLASS_=65, CONST_=66, CONTINUE_=67, COVARIANT_=68, CONTAINER_=69, 
		CHILD_=70, COLOR_=71, COLORS_=72, DECORATION_=73, DEFAULT_=74, DEFERRED_=75, 
		DO_=76, DYNAMIC_=77, ELSE_=78, ENUM_=79, EXPORT_=80, EXTENDS_=81, EXTENSION_=82, 
		EXTERNAL_=83, FACTORY_=84, FALSE_=85, FINAL_=86, FINALLY_=87, FOR_=88, 
		FUNCTION_=89, GET_=90, GTILDE_=91, HIDE_=92, IF_=93, IMPLEMENTS_=94, IMPORT_=95, 
		IN_=96, INTERFACE_=97, IS_=98, LATE_=99, LET_=100, LIBRARY_=101, LIST=102, 
		MIXIN_=103, NATIVE_=104, NEW_=105, NULL_=106, OF_=107, ON_=108, OPERATOR_=109, 
		PART_=110, REQUIRED_=111, RETHROW_=112, RETURN_=113, SET_=114, SHOW_=115, 
		SHAPE_=116, STATIC_=117, SUPER_=118, SWITCH_=119, SYNC_=120, STACK_=121, 
		THIS_=122, THROW_=123, TRUE_=124, TRY_=125, TYPEDEF_=126, INTTYPE=127, 
		DOUBLETYPE=128, FLOATTYPE=129, STRINGTYPE=130, BoolTYPE=131, QUEUE=132, 
		VARTYPE=133, VOID_=134, WHILE_=135, WITH_=136, YIELD_=137, Main=138, INT=139, 
		BOOL=140, PUBLIC_=141, PROTECT_=142, PRIVATE_=143, Image_=144, IMAGEIN_=145, 
		NETWORKIMAGE_=146, TEXT_=147, TEXTFIELD_=148, LABELTEXT_=149, HINTTEXT_=150, 
		HEIGHT_=151, WIDTH_=152, ROW_=153, COLUMN_=154, CHILDREN=155, MAINAXISALIGNMENT=156, 
		MAINAXISALIGNMENTIN=157, CROSSAXISALIGNMENT=158, CROSSAXISALIGNMENTIN=159, 
		CENTER=160, END=161, START=162, ACCESSMODIFIER=163, NUMBER=164, HEX_NUMBER=165, 
		SingleLineString=166, MultiLineString=167, IDENTIFIER=168, WHITESPACE=169, 
		SINGLE_LINE_COMMENT=170, MULTI_LINE_COMMENT=171, CONTROLLER_=172, INPUTDECORATION_=173, 
		HELPERTEXT_=174, ICON_=175, ONCHANGED_=176;
	public static final int
		RULE_prog = 0, RULE_widgets = 1, RULE_textField = 2, RULE_textFieldProperties = 3, 
		RULE_textFieldTextProperty = 4, RULE_textFieldControllerProperty = 5, 
		RULE_textFieldDecorationProperty = 6, RULE_inputDecorationProperties = 7, 
		RULE_inputDecorationLabelTextProperty = 8, RULE_inputDecorationHintTextProperty = 9, 
		RULE_inputDecorationHelperTextProperty = 10, RULE_inputDecorationIconProperty = 11, 
		RULE_textFieldOnChangedProperty = 12, RULE_image = 13, RULE_imageProperties = 14, 
		RULE_imageproperty = 15, RULE_height = 16, RULE_width = 17, RULE_container = 18, 
		RULE_containerproperties = 19, RULE_child = 20, RULE_color = 21, RULE_decoration = 22, 
		RULE_shape = 23, RULE_row = 24, RULE_rowProperties = 25, RULE_rowproperty = 26, 
		RULE_children = 27, RULE_column = 28, RULE_columnProperties = 29, RULE_columnproperty = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "widgets", "textField", "textFieldProperties", "textFieldTextProperty", 
			"textFieldControllerProperty", "textFieldDecorationProperty", "inputDecorationProperties", 
			"inputDecorationLabelTextProperty", "inputDecorationHintTextProperty", 
			"inputDecorationHelperTextProperty", "inputDecorationIconProperty", "textFieldOnChangedProperty", 
			"image", "imageProperties", "imageproperty", "height", "width", "container", 
			"containerproperties", "child", "color", "decoration", "shape", "row", 
			"rowProperties", "rowproperty", "children", "column", "columnProperties", 
			"columnproperty"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'&'", "'&&'", "'&='", "'@'", "','", "']'", "'}'", "'^'", "'^='", 
			"':'", "')'", "'.'", "'..'", "'...'", "'=='", "'=>'", "'='", "'>'", "'<'", 
			"'<='", "'<<'", "'<<='", "'-='", "'-'", "'--'", "'!='", "'!'", "'['", 
			"'{'", "'('", "'|'", "'%'", "'%='", "'+'", "'+='", "'++'", "'#'", "'|='", 
			"'||'", "'?'", "'?.'", "'?..'", "'??'", "'??='", "'ROW'", "';'", "'/='", 
			"'/'", "'~/'", "'~/='", "'~'", "'*'", "'*='", "'abstract'", "'as'", "'assert'", 
			"'async'", "'await'", "'add'", "'BoxDecoration'", "'BoxShape'", "'break'", 
			"'case'", "'catch'", "'class'", "'const'", "'continue'", "'covariant'", 
			"'Container'", "'child'", "'color'", "'Colors'", "'decoration'", "'default'", 
			"'deferred'", "'do'", "'dynamic'", "'else'", "'enum'", "'export'", "'extends'", 
			"'extension'", "'external'", "'factory'", "'false'", "'final'", "'finally'", 
			"'for'", "'Function'", "'get'", "'gtilde'", "'hide'", "'if'", "'implements'", 
			"'import'", "'in'", "'interface'", "'is'", "'late'", "'let'", "'library'", 
			"'List'", "'mixin'", "'native'", "'new'", "'null'", "'of'", "'on'", "'operator'", 
			"'part'", "'required'", "'rethrow'", "'return'", "'set'", "'show'", "'shape'", 
			"'static'", "'super'", "'switch'", "'sync'", "'Stack'", "'this'", "'throw'", 
			"'true'", "'try'", "'typedef'", "'int'", "'double'", "'float'", "'String'", 
			"'bool'", "'Queue'", "'var'", "'void'", "'while'", "'with'", "'yield'", 
			"'main'", null, null, "'public'", "'protect'", "'private'", "'Image'", 
			"'image'", "'NetWorkImage'", "'text'", "'TextField'", "'labelText'", 
			"'hintText'", "'height'", "'width'", "'Row'", "'Column'", "'children'", 
			"'MainAxisAlignment'", "'mainAxisAlignment'", "'CrossAxisAlignment'", 
			"'crossAxisAlignment'", "'center'", "'end'", "'start'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "A", "AA", "AE", "AT", "C", "CB", "CBC", "CIR", "CIRE", "CO", "CP", 
			"D", "DD", "DDD", "EE", "EG", "EQ", "GT", "LT", "LTE", "LTLT", "LTLTE", 
			"ME", "MINUS", "MM", "NE", "NOT", "OB", "OBC", "OP", "P", "PC", "PE", 
			"PL", "PLE", "PLPL", "PO", "POE", "PP", "QU", "QUD", "QUDD", "QUQU", 
			"QUQUEQ", "ROW", "SC", "SE", "SL", "SQS", "SQSE", "SQUIG", "ST", "STE", 
			"ABSTRACT_", "AS_", "ASSERT_", "ASYNC_", "AWAIT_", "ADD_", "BOXDECORATION_", 
			"BOXSHAPE_", "BREAK_", "CASE_", "CATCH_", "CLASS_", "CONST_", "CONTINUE_", 
			"COVARIANT_", "CONTAINER_", "CHILD_", "COLOR_", "COLORS_", "DECORATION_", 
			"DEFAULT_", "DEFERRED_", "DO_", "DYNAMIC_", "ELSE_", "ENUM_", "EXPORT_", 
			"EXTENDS_", "EXTENSION_", "EXTERNAL_", "FACTORY_", "FALSE_", "FINAL_", 
			"FINALLY_", "FOR_", "FUNCTION_", "GET_", "GTILDE_", "HIDE_", "IF_", "IMPLEMENTS_", 
			"IMPORT_", "IN_", "INTERFACE_", "IS_", "LATE_", "LET_", "LIBRARY_", "LIST", 
			"MIXIN_", "NATIVE_", "NEW_", "NULL_", "OF_", "ON_", "OPERATOR_", "PART_", 
			"REQUIRED_", "RETHROW_", "RETURN_", "SET_", "SHOW_", "SHAPE_", "STATIC_", 
			"SUPER_", "SWITCH_", "SYNC_", "STACK_", "THIS_", "THROW_", "TRUE_", "TRY_", 
			"TYPEDEF_", "INTTYPE", "DOUBLETYPE", "FLOATTYPE", "STRINGTYPE", "BoolTYPE", 
			"QUEUE", "VARTYPE", "VOID_", "WHILE_", "WITH_", "YIELD_", "Main", "INT", 
			"BOOL", "PUBLIC_", "PROTECT_", "PRIVATE_", "Image_", "IMAGEIN_", "NETWORKIMAGE_", 
			"TEXT_", "TEXTFIELD_", "LABELTEXT_", "HINTTEXT_", "HEIGHT_", "WIDTH_", 
			"ROW_", "COLUMN_", "CHILDREN", "MAINAXISALIGNMENT", "MAINAXISALIGNMENTIN", 
			"CROSSAXISALIGNMENT", "CROSSAXISALIGNMENTIN", "CENTER", "END", "START", 
			"ACCESSMODIFIER", "NUMBER", "HEX_NUMBER", "SingleLineString", "MultiLineString", 
			"IDENTIFIER", "WHITESPACE", "SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", 
			"CONTROLLER_", "INPUTDECORATION_", "HELPERTEXT_", "ICON_", "ONCHANGED_"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "flutterParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public flutterParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public WidgetsContext widgets() {
			return getRuleContext(WidgetsContext.class,0);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).exitProg(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flutterParserVisitor ) return ((flutterParserVisitor<? extends T>)visitor).visitProg(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(62);
			widgets();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WidgetsContext extends ParserRuleContext {
		public TextFieldContext textField() {
			return getRuleContext(TextFieldContext.class,0);
		}
		public ImageContext image() {
			return getRuleContext(ImageContext.class,0);
		}
		public RowContext row() {
			return getRuleContext(RowContext.class,0);
		}
		public ColumnContext column() {
			return getRuleContext(ColumnContext.class,0);
		}
		public ContainerContext container() {
			return getRuleContext(ContainerContext.class,0);
		}
		public WidgetsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_widgets; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).enterWidgets(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).exitWidgets(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flutterParserVisitor ) return ((flutterParserVisitor<? extends T>)visitor).visitWidgets(this);
			else return visitor.visitChildren(this);
		}
	}

	public final WidgetsContext widgets() throws RecognitionException {
		WidgetsContext _localctx = new WidgetsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_widgets);
		try {
			setState(69);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TEXTFIELD_:
				enterOuterAlt(_localctx, 1);
				{
				setState(64);
				textField();
				}
				break;
			case Image_:
				enterOuterAlt(_localctx, 2);
				{
				setState(65);
				image();
				}
				break;
			case ROW_:
				enterOuterAlt(_localctx, 3);
				{
				setState(66);
				row();
				}
				break;
			case COLUMN_:
				enterOuterAlt(_localctx, 4);
				{
				setState(67);
				column();
				}
				break;
			case CONTAINER_:
				enterOuterAlt(_localctx, 5);
				{
				setState(68);
				container();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextFieldContext extends ParserRuleContext {
		public TerminalNode TEXTFIELD_() { return getToken(flutterParser.TEXTFIELD_, 0); }
		public TerminalNode OP() { return getToken(flutterParser.OP, 0); }
		public TerminalNode CP() { return getToken(flutterParser.CP, 0); }
		public List<TextFieldPropertiesContext> textFieldProperties() {
			return getRuleContexts(TextFieldPropertiesContext.class);
		}
		public TextFieldPropertiesContext textFieldProperties(int i) {
			return getRuleContext(TextFieldPropertiesContext.class,i);
		}
		public List<TerminalNode> C() { return getTokens(flutterParser.C); }
		public TerminalNode C(int i) {
			return getToken(flutterParser.C, i);
		}
		public TextFieldContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textField; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).enterTextField(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).exitTextField(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flutterParserVisitor ) return ((flutterParserVisitor<? extends T>)visitor).visitTextField(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextFieldContext textField() throws RecognitionException {
		TextFieldContext _localctx = new TextFieldContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_textField);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(TEXTFIELD_);
			setState(72);
			match(OP);
			setState(76); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(73);
				textFieldProperties();
				setState(74);
				match(C);
				}
				}
				setState(78); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( _la==DECORATION_ || ((((_la - 147)) & ~0x3f) == 0 && ((1L << (_la - 147)) & ((1L << (TEXT_ - 147)) | (1L << (CONTROLLER_ - 147)) | (1L << (ONCHANGED_ - 147)))) != 0) );
			setState(80);
			match(CP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextFieldPropertiesContext extends ParserRuleContext {
		public TextFieldTextPropertyContext textFieldTextProperty() {
			return getRuleContext(TextFieldTextPropertyContext.class,0);
		}
		public TextFieldControllerPropertyContext textFieldControllerProperty() {
			return getRuleContext(TextFieldControllerPropertyContext.class,0);
		}
		public TextFieldDecorationPropertyContext textFieldDecorationProperty() {
			return getRuleContext(TextFieldDecorationPropertyContext.class,0);
		}
		public TextFieldOnChangedPropertyContext textFieldOnChangedProperty() {
			return getRuleContext(TextFieldOnChangedPropertyContext.class,0);
		}
		public TextFieldPropertiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textFieldProperties; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).enterTextFieldProperties(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).exitTextFieldProperties(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flutterParserVisitor ) return ((flutterParserVisitor<? extends T>)visitor).visitTextFieldProperties(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextFieldPropertiesContext textFieldProperties() throws RecognitionException {
		TextFieldPropertiesContext _localctx = new TextFieldPropertiesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_textFieldProperties);
		try {
			setState(86);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case TEXT_:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				textFieldTextProperty();
				}
				break;
			case CONTROLLER_:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				textFieldControllerProperty();
				}
				break;
			case DECORATION_:
				enterOuterAlt(_localctx, 3);
				{
				setState(84);
				textFieldDecorationProperty();
				}
				break;
			case ONCHANGED_:
				enterOuterAlt(_localctx, 4);
				{
				setState(85);
				textFieldOnChangedProperty();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextFieldTextPropertyContext extends ParserRuleContext {
		public TerminalNode TEXT_() { return getToken(flutterParser.TEXT_, 0); }
		public TerminalNode CO() { return getToken(flutterParser.CO, 0); }
		public TerminalNode SingleLineString() { return getToken(flutterParser.SingleLineString, 0); }
		public TextFieldTextPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textFieldTextProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).enterTextFieldTextProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).exitTextFieldTextProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flutterParserVisitor ) return ((flutterParserVisitor<? extends T>)visitor).visitTextFieldTextProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextFieldTextPropertyContext textFieldTextProperty() throws RecognitionException {
		TextFieldTextPropertyContext _localctx = new TextFieldTextPropertyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_textFieldTextProperty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(TEXT_);
			setState(89);
			match(CO);
			setState(90);
			match(SingleLineString);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextFieldControllerPropertyContext extends ParserRuleContext {
		public TerminalNode CONTROLLER_() { return getToken(flutterParser.CONTROLLER_, 0); }
		public TerminalNode CO() { return getToken(flutterParser.CO, 0); }
		public TerminalNode IDENTIFIER() { return getToken(flutterParser.IDENTIFIER, 0); }
		public TextFieldControllerPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textFieldControllerProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).enterTextFieldControllerProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).exitTextFieldControllerProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flutterParserVisitor ) return ((flutterParserVisitor<? extends T>)visitor).visitTextFieldControllerProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextFieldControllerPropertyContext textFieldControllerProperty() throws RecognitionException {
		TextFieldControllerPropertyContext _localctx = new TextFieldControllerPropertyContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_textFieldControllerProperty);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(CONTROLLER_);
			setState(93);
			match(CO);
			setState(94);
			match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TextFieldDecorationPropertyContext extends ParserRuleContext {
		public TerminalNode DECORATION_() { return getToken(flutterParser.DECORATION_, 0); }
		public TerminalNode CO() { return getToken(flutterParser.CO, 0); }
		public TerminalNode INPUTDECORATION_() { return getToken(flutterParser.INPUTDECORATION_, 0); }
		public TerminalNode OP() { return getToken(flutterParser.OP, 0); }
		public TerminalNode CP() { return getToken(flutterParser.CP, 0); }
		public List<InputDecorationPropertiesContext> inputDecorationProperties() {
			return getRuleContexts(InputDecorationPropertiesContext.class);
		}
		public InputDecorationPropertiesContext inputDecorationProperties(int i) {
			return getRuleContext(InputDecorationPropertiesContext.class,i);
		}
		public TextFieldDecorationPropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_textFieldDecorationProperty; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).enterTextFieldDecorationProperty(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).exitTextFieldDecorationProperty(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flutterParserVisitor ) return ((flutterParserVisitor<? extends T>)visitor).visitTextFieldDecorationProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TextFieldDecorationPropertyContext textFieldDecorationProperty() throws RecognitionException {
		TextFieldDecorationPropertyContext _localctx = new TextFieldDecorationPropertyContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_textFieldDecorationProperty);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			match(DECORATION_);
			setState(97);
			match(CO);
			setState(98);
			match(INPUTDECORATION_);
			setState(99);
			match(OP);
			setState(101); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(100);
				inputDecorationProperties();
				}
				}
				setState(103); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( ((((_la - 149)) & ~0x3f) == 0 && ((1L << (_la - 149)) & ((1L << (LABELTEXT_ - 149)) | (1L << (HINTTEXT_ - 149)) | (1L << (HELPERTEXT_ - 149)) | (1L << (ICON_ - 149)))) != 0) );
			setState(105);
			match(CP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InputDecorationPropertiesContext extends ParserRuleContext {
		public InputDecorationLabelTextPropertyContext inputDecorationLabelTextProperty() {
			return getRuleContext(InputDecorationLabelTextPropertyContext.class,0);
		}
		public InputDecorationHintTextPropertyContext inputDecorationHintTextProperty() {
			return getRuleContext(InputDecorationHintTextPropertyContext.class,0);
		}
		public InputDecorationHelperTextPropertyContext inputDecorationHelperTextProperty() {
			return getRuleContext(InputDecorationHelperTextPropertyContext.class,0);
		}
		public InputDecorationIconPropertyContext inputDecorationIconProperty() {
			return getRuleContext(InputDecorationIconPropertyContext.class,0);
		}
		public InputDecorationPropertiesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inputDecorationProperties; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).enterInputDecorationProperties(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof flutterParserListener ) ((flutterParserListener)listener).exitInputDecorationProperties(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof flutterParserVisitor ) return ((flutterParserVisitor<? extends T>)visitor).visitInputDecorationProperties(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InputDecorationPropertiesContext inputDecorationProperties() throws RecognitionException {
		InputDecorationPropertiesContext _localctx = new InputDecorationPropertiesContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_inputDecorationProperties);
		try {
			setState(111);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LABELTEXT_:
				enterOuterAlt(_localctx, 1);
				{
				setState(107);
				inputDecorationLabelTextProperty();
				}
				break;
			case HINTTEXT_:
				enterOuterAlt(_localctx, 2);
				{
				setState(108);
				inputDecorationHintTextProperty();
				}
				break;
			case HELPERTEXT_:
				enterOuterAlt(_localctx, 3);
				{
				setState(109);
				inputDecorationHelperTextProperty();
				}
				break;
			case ICON_:
				enterOuterAlt(_localctx, 4);
				{
				setState(110);
				inputDecorationIconProperty();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
